# minirepo

./: .bazelrc  .envrc  .gitignore  .hie-bios  README.md  WORKSPACE  hie.yaml
bazel/repository/: dependencies.bzl  docker.bzl  ghcide-stack.yaml  go.bzl  haskell.bzl  nixpkgs.bzl  posix.bzl  python.bzl
direnv/: envrc.bash
direnv/modules/: bazel_sanity_check.bash  use_nix.bash  version_checks.bash
example-service/: BUILD.bazel
example-service/ifc/: Example.hs
example-service/impl/: Main.hs
example-service/src/: Main.hs
nix/: shell.nix
nix/haskell/: default.nix
nix/nixpkgs/: default.nix
nix/tooling/: default.nix
