load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
    "haskell_repl",
)
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

haskell_binary(
    name = "impl",
    srcs = [
        "impl/Main.hs",
    ],
    src_strip_prefix = "impl",
    deps = [
        "@stackage//:base",
        "@stackage//:mtl",
        "@stackage//:postgresql-simple",
        "@stackage//:template-haskell",
        "@stackage//:zlib",

        ":ifc",
    ],
    compiler_flags = [
        "-optl-static",
        "-optl-pthread",
    ],
)

cc_image(
    name = "impl-image",
    binary = ":impl",
)

haskell_library(
    name = "ifc",
    srcs = [
        "ifc/Example.hs",
    ],
    src_strip_prefix = "ifc",
    deps = [
        "@stackage//:base",
        "@stackage//:mtl",
    ],
)

haskell_repl(
    name = "impl-ifc-repl",
    experimental_from_source = [
        ":ifc",
        ":impl",
    ],
    deps = [
        ":ifc",
        ":impl",
    ],
)
